# python-script-introduction

./: .gitignore  README.md  default.nix  pyproject.toml  shell.nix
nix/: sources.json
src/scripts/: __main__.py  list_directory.py  lsdir.py  mkdir.py  rmdir.py
