[tool.poetry]
name = "python-script-introduction"
version = "0.1.0"
description = "Introduction to python scripts as replacement for shell scripts"
authors = ["Philip Schömig <philip.schoemig@posteo.de>"]
readme = "README.md"
packages = [{ include = "scripts", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
scripts = 'scripts.__main__:main'

[tool.poetry.group.dev.dependencies]
ruff = "0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
